# Rust-and-MongoDB

./: Cargo.toml
src/: main.rs
src/Controller/: mod.rs  student_controller.rs
src/DataBase/: mod.rs  student_mdb.rs
src/Model/: mod.rs  student_model.rs
src/routes/: mod.rs  student_routes.rs
